--- a/en/AboutRin/index.html
+++ b/en/AboutRin/index.html
@@ -52,14 +52,14 @@ what the King of Ljubav is up to
     <footer>
         <div class="row-3">
             <div class="col-10">
-                <a href="../AboutUs/index.html" id="AboutUs" class="Footer">About Us</a>
+                <a href="../AboutUs" id="AboutUs" class="Footer">About Us</a>
             </div>
             <div class="col-11">
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
             <div class="col-12">
-                <a href="../../en/AboutRin/index.html"><img src="/Universal_Images/English.png" alt="Set language to English" id="EnFlag"></a>
-                <a href="../../de/AboutRin/index.html"><img src="/Universal_Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
+                <a href="../../en/AboutRin"><img src="/Universal_Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="../../de/AboutRin"><img src="/Universal_Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
