--- a/en/Ljubav/index.html
+++ b/en/Ljubav/index.html
@@ -11,22 +11,22 @@
     <nav>
         <div class="row-1">
             <div class="col-1">
-                <a href="../AboutRin/index.html" id="AboutRin" class="Nav">About Rin</a>
+                <a href="../AboutRin" id="AboutRin" class="Nav">About Rin</a>
                 <p id="pLjubav">
-                    <a href="../Ljubav/index.html" id="Ljubav" class="Nav">Ljubav</a>
+                    <a href="../Ljubav" id="Ljubav" class="Nav">Ljubav</a>
                 </p>
             </div>
             <div class="col-2">
-                <a href="../Current/index.html"><img src="/Universal_Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="../Current"><img src="/Universal_Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
-                <a href="../Live/index.html" id="Live" class="Nav">Rin Live</a>
+                <a href="../Live" id="Live" class="Nav">Rin Live</a>
                 <p id="pMusic">
-                    <a href="../Music/index.html" id="Music" class="Nav">Music</a>
+                    <a href="../Music" id="Music" class="Nav">Music</a>
                 </p>
             </div>    
             <div class="col-4">
-                <a href="../Current/index.html" id="Current" class="Nav">Current</a>
+                <a href="../Current" id="Current" class="Nav">Current</a>
             </div>    
         </div>
     </nav>
@@ -44,14 +44,14 @@
     <footer>
         <div class="row-3">
             <div class="col-10">
-                <a href="../AboutUs/index.html" id="AboutUs" class="Footer">About Us</a>
+                <a href="../AboutUs" id="AboutUs" class="Footer">About Us</a>
             </div>
             <div class="col-11">
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
             <div class="col-12">
-                <a href="../../en/Ljubav/index.html"><img src="/Universal_Images/English.png" alt="Set language to English" id="EnFlag"></a>
-                <a href="../../de/Ljubav/index.html"><img src="/Universal_Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
+                <a href="../../en/Ljubav"><img src="/Universal_Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="../../de/Ljubav"><img src="/Universal_Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
