--- a/en/AboutRin/index.html
+++ b/en/AboutRin/index.html
@@ -52,7 +52,7 @@ what the King of Ljubav is up to
     <footer>
         <div class="row-3">
             <div class="col-10">
-                <a href="../AboutUs" id="AboutUs" class="Footer">About Us</a>
+                <a href="../AboutMe" id="AboutMe" class="Footer">About Me</a>
             </div>
             <div class="col-11">
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
