--- a/en/Music/index.html
+++ b/en/Music/index.html
@@ -62,7 +62,7 @@
     <footer>
         <div class="row-3">
             <div class="col-10">
-                <a href="../AboutUs" id="AboutUs" class="Footer">About Us</a>
+                <a href="../AboutMe" id="AboutMe" class="Footer">About Me</a>
             </div>
             <div class="col-11">
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
