--- a/en/Current/index.html
+++ b/en/Current/index.html
@@ -17,7 +17,7 @@
                 </p>
             </div>
             <div class="col-2">
-                <a href="../Current"><img src="/Universal_Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="../Current"><img src="../Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
                 <a href="../Live" id="Live" class="Nav">Rin Live</a>
@@ -31,16 +31,18 @@
         </div>
     </nav>
     <article>
-        <p>
-            "Baby, komm und steig in die S-Bahn
-Denn echte Liebe braucht keine Extras"
-
-
-Rin - Aretha Franklin Freestyle, Eros (2018) 
-        </p>
-        <P>
-            -----------------------
-        </P>
+        <div class="row-2">
+            <div class="col-5">
+                <p>
+                    "Baby, komm und steig in die S-Bahn<br/>Denn echte Liebe braucht keine Extras"
+                </p>
+                <p id="pQuote">
+                    Rin - Aretha Franklin Freestyle, Eros (2018)                    
+                </p>        
+            </div>
+            <div class="col-6">
+                <a href="../AboutRin"><img src="../Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
+            </div>
         <P>
             stream Kleinstadt Deluxe now
         </P>
@@ -59,6 +61,7 @@ More information here
         <p>
             Ljubav© Part 3 now available
         </p>
+        </div>
     </article>
     <footer>
         <div class="row-3">
@@ -69,8 +72,8 @@ More information here
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
             <div class="col-12">
-                <a href="../../en/Current"><img src="/Universal_Images/English.png" alt="Set language to English" id="EnFlag"></a>
-                <a href="../../de/Current"><img src="/Universal_Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
+                <a href="../../en/Current"><img src="/Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="../../de/Current"><img src="/Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
