--- a/en/Ljubav/index.html
+++ b/en/Ljubav/index.html
@@ -17,7 +17,7 @@
                 </p>
             </div>
             <div class="col-2">
-                <a href="../Current"><img src="/Universal_Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="../Current"><img src="/Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
                 <a href="../Live" id="Live" class="Nav">Rin Live</a>
@@ -50,8 +50,8 @@
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
             <div class="col-12">
-                <a href="../../en/Ljubav"><img src="/Universal_Images/English.png" alt="Set language to English" id="EnFlag"></a>
-                <a href="../../de/Ljubav"><img src="/Universal_Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
+                <a href="../../en/Ljubav"><img src="/Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="../../de/Ljubav"><img src="/Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
