--- a/en/Current/index.html
+++ b/en/Current/index.html
@@ -17,7 +17,7 @@
                 </p>
             </div>
             <div class="col-2">
-                <a href="../Current"><img src="../Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="../Current"><img src="/Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
                 <a href="../Live" id="Live" class="Nav">Rin Live</a>
@@ -41,7 +41,7 @@
                 </p>        
             </div>
             <div class="col-6">
-                <a href="../AboutRin"><img src="../Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
+                <a href="../AboutRin"><img src="/Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
             </div>
         <P>
             stream Kleinstadt Deluxe now
