--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </p>
             </div>
             <div class="col-2">
-                <a href="/en/Current"><img src="/Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="/en/Current"><img src="Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
                 <a href="/en/Live" id="Live" class="Nav">Rin Live</a>
@@ -66,8 +66,8 @@ More information here
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
             <div class="col-12">
-                <a href="../../English/Current"><img src="/Images/English.png" alt="Set language to English" id="EnFlag"></a>
-                <a href="../../Deutsch/Current"><img src="/Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
+                <a href="../../English/Current"><img src="Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="../../Deutsch/Current"><img src="Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
