--- a/en/Current/index.html
+++ b/en/Current/index.html
@@ -43,9 +43,14 @@
             <div class="col-6">
                 <a href="../AboutRin"><img src="../../Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
             </div>
-        <P>
-            stream Kleinstadt Deluxe now 
-        </P>
+            <div class="col-7">
+                <P>
+                    stream Kleinstadt Deluxe <a href="../Music" id="a_Current_Music">now</a> 
+                </P>        
+            </div>
+            <div class="col-8">
+                <a href="../Music"><img src="../../Images/Current_KSDeluxe.png" alt="Kleinstadt Deluxe Album Cover" id="IMG_Current_KSDeluxe"></a>
+            </div>
         <p>
             Rin is finally going on tour again in 2023 
 and will also come to your city
