--- a/index.html
+++ b/index.html
@@ -11,63 +11,76 @@
     <nav>
         <div class="row-1">
             <div class="col-1">
-                <a href="/en/AboutRin" id="AboutRin" class="Nav">About Rin</a>
+                <a href="en/AboutRin" id="AboutRin" class="Nav">About Rin</a>
                 <p id="pLjubav">
-                    <a href="/en/Ljubav" id="Ljubav" class="Nav">Ljubav</a>
+                    <a href="en/Ljubav" id="Ljubav" class="Nav">Ljubav</a>
                 </p>
             </div>
             <div class="col-2">
-                <a href="/en/Current"><img src="Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
+                <a href="en/Current"><img src="Images/Logo.png" alt="King of Ljubav Logo" id="Logo"></a>
             </div>
             <div class="col-3">
-                <a href="/en/Live" id="Live" class="Nav">Rin Live</a>
+                <a href="en/Live" id="Live" class="Nav">Rin Live</a>
                 <p id="pMusic">
-                    <a href="7en/Music" id="Music" class="Nav">Music</a>
+                    <a href="en/Music" id="Music" class="Nav">Music</a>
                 </p>
             </div>    
             <div class="col-4">
-                <a href="/en/Current" id="Current" class="Nav">Current</a>
+                <a href="en/Current" id="Current" class="Nav">Current</a>
             </div>    
         </div>
     </nav>
     <article>
-        <p>
-            "Baby, komm und steig in die S-Bahn
-Denn echte Liebe braucht keine Extras"
-
-
-Rin - Aretha Franklin Freestyle, Eros (2018) 
-        </p>
-        <P>
-            -----------------------
-        </P>
-        <P>
-            stream Kleinstadt Deluxe now
-        </P>
-        <p>
-            Rin is finally going on tour again in 2023 
-and will also come to your city
-
-More information here
-        </p>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            Ljubav© Part 3 now available
-        </p>
+        <div class="row-2">
+            <div class="col-5">
+                <p>
+                    "Baby, komm und steig in die S-Bahn<br/>Denn echte Liebe braucht keine Extras"
+                </p>
+                <p id="pQuote">
+                    Rin - Aretha Franklin Freestyle, Eros (2018)                    
+                </p>        
+            </div>
+            <div class="col-6">
+                <a href="en/AboutRin"><img src="Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
+            </div>
+            <div class="col-7">
+                <P>
+                    stream Kleinstadt Deluxe <a href="en/Music" class="a_Current">now</a> 
+                </P>        
+            </div>
+            <div class="col-8">
+                <a href="en/Music"><img src="Images/Current_KSDeluxe.png" alt="Kleinstadt Deluxe Album-Cover" id="IMG_Current_KSDeluxe"></a>
+            </div>
+            <div class="col-9">
+                <a href="en/Live"><img src="Images/Current_LivePoster.png" alt="Rin Live Tour 2022 Poster" id=IMG_Current_LivePoster></a>
+            </div>
+            <div class="col-10">
+                <p>
+                    Rin is finally going on tour again in 2023 
+                    and will also come to your city
+                    <p id="pLive">More information <a href="en/Live" class="a_Current">here</a>
+                </p>        
+            </div>
+            <div class="col-11">
+                <a href="en/Ljubav" alt="Ljubav Part 3 Advertisement" id="IMG_Current_Ljubav"><img src="Images/Current_Ljubav.png"></a>
+            </div>
+            <div class="col-12">
+                <p>
+                    Ljubav© Part 3 <a href="en/Ljubav" class="a_Current">now available</a>
+                </p>        
+            </div>
     </article>
     <footer>
         <div class="row-3">
-            <div class="col-10">
-                <a href="../AboutUs" id="AboutUs" class="Footer">About Us</a>
+            <div class="col-16">
+                <a href="en/AboutMe" id="AboutMe" class="Footer">About Me</a>
             </div>
-            <div class="col-11">
+            <div class="col-17">
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
-            <div class="col-12">
-                <a href="../../English/Current"><img src="Images/English.png" alt="Set language to English" id="EnFlag"></a>
-                <a href="../../Deutsch/Current"><img src="Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
+            <div class="col-18">
+                <a href="en/Current"><img src="Images/English.png" alt="Set language to English" id="EnFlag"></a>
+                <a href="de/Current"><img src="Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
         </div>
     </footer>
