--- a/en/AboutRin/index.html
+++ b/en/AboutRin/index.html
@@ -31,23 +31,31 @@
         </div>
     </nav>
     <article>
-        <P>
-            Renato Simunović, born on 28 June 1994 in Bietigheim-Bissingen in Germany, is the son of a Croatian guest worker. His parents are both Croatian, but his father is originally from Bosnia and his mother from Herzegovina. The family moved often, which was particularly hard for Rin. Later, he failed high school due to a lack of interest. After graduating from school, Rin did nothing for three years. During this time, he started listening to trap music and freestyling. Later, he started studying media business, which he quit a short time later to concentrate on his music career. 
-        </P>
-        <P>
-            -----------------------
-        </P>
-        <P>
-            Renato Simunović, born on 28 June 1994 in Bietigheim-Bissingen in Germany, is the son of a Croatian guest worker. His parents are both Croatian, but his father is originally from Bosnia and his mother from Herzegovina. The family moved often, which was particularly hard for Rin. Later, he failed high school due to a lack of interest. After graduating from school, Rin did nothing for three years. During this time, he started listening to trap music and freestyling. Later, he started studying media business, which he quit a short time later to concentrate on his music career. 
-        </P>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            Click here to go to Rin's Instagram.
-There you will find regular updates on 
-what the King of Ljubav is up to
-        </p>
+        <div class="row-2">
+            <div class="col-5">
+                <p>
+                    Renato Simunović, born on 28 June 1994 in Bietigheim-Bissingen in Germany, is the son of a Croatian guest worker. His parents are both Croatian, but his father is originally from Bosnia and his mother from Herzegovina. The family moved often, which was particularly hard for Rin. Later, he failed high school due to a lack of interest. After graduating from school, Rin did nothing for three years. During this time, he started listening to trap music and freestyling. Later, he started studying media business, which he quit a short time later to concentrate on his music career. 
+                </p>        
+            </div>
+            <div class="col-6">
+                <img src="../../Images/AboutRin_1.png" alt="Rin on the red carpet" id="IMG_AboutRin_1">
+            </div>
+            <div class="col-7">
+                <img src="../../Images/AboutRin_2.png" alt="Rin smoking" id="IMG_AboutRin_2">
+            </div>
+            <div class="col-8">
+                <p>
+                    Rin's career began in 2012 when he started making music with the rapper Caz. After releasing the EP "Ljubav/Beichstuhl" in 2015, Rin joined the label "Alles oder Nix". They recorded an EP that was never released. A short time later, Rin joined the Berlin label "Live from Earth". There he met the rapper Yung Hurn for the first time. Their song "Bianco" was released in 2016 and was named the best song of the year by the "Juice Magazin". In 2017, he then joined the "Division"-label, which is his current label. In the same year, he released his first album "EROS". It was followed by "Planet Megatron" in 2018, "Nimmerland" in 2019 and "Kleinstadt" in 2021. In addition, many singles were also released.
+                </p>
+            </div>
+            <div class="col-9">
+                <p>
+                    <a href="https://www.instagram.com/rintintin/?hl=en" class="a_AboutRin" target="_blank">Click here</a> to go to Rin's Instagram.
+                    There you will find regular updates on 
+                    what the King of Ljubav is up to
+                </p>          
+            </div>
+        </div>
     </article>
     <footer>
         <div class="row-3">
