--- a/en/Ljubav/index.html
+++ b/en/Ljubav/index.html
@@ -31,15 +31,24 @@
         </div>
     </nav>
     <article>
-        <P>
-            Ljubav is the Croatian word for love. It has always been a part of Rin's music and appeared in a whole range of songs. Rin's goal is to spread love everywhere he goes. #Ljubav4Life
-        </P>
-        <P>
-            -----------------------
-        </P>
-        <P>
-            Ljubav Europe is Rin's own clothing brand. They mainly sell streetwear, but also accessories like towels. Their first drop was in July 2021. The brand is quite exclusive as you have to wait for new clothes to be released, which are usually sold out.
-        </P>
+        <div class="row-2">
+            <div class="col-5">
+                <p>
+                    Ljubav is the Croatian word for love. It has always been a part of Rin's music and appeared in a whole range of songs. Rin's goal is to spread love everywhere he goes. <p id="pLjubav_txt">Ljubav4Life</p>
+                </p>    
+            </div>
+            <div class="col-6">
+                <img src="../../Images/Ljubav_Pose.png" alt="Rin wearing Nike x Ljubav t-shirt" id="IMG_Ljubav_Pose">
+            </div>
+            <div class="col-7">
+                <img src="../../Images/Ljubav_Logo.png" alt="Ljubav Europe Logo" id="IMG_Ljubav_Logo">
+            </div>
+            <div class="col-8">
+                <p>
+                    Ljubav Europe is Rin's own clothing brand. They mainly sell streetwear, but also accessories like towels. Their first drop was in July 2021. The brand is quite exclusive as you have to wait for new clothes to be released, which are usually sold out.
+                </p>
+            </div>
+        </div>
     </article>
     <footer>
         <div class="row-3">
