--- a/en/Ljubav/index.html
+++ b/en/Ljubav/index.html
@@ -41,7 +41,7 @@
                 <img src="../../Images/Ljubav_Pose.png" alt="Rin wearing Nike x Ljubav t-shirt" id="IMG_Ljubav_Pose">
             </div>
             <div class="col-7">
-                <img src="../../Images/Ljubav_Logo.png" alt="Ljubav Europe Logo" id="IMG_Ljubav_Logo">
+                <a href="https://ljubaveurope.com/" class="a_Ljubav" target="_blank"><img src="../../Images/Ljubav_Logo.png" alt="Ljubav Europe Logo" id="IMG_Ljubav_Logo"></a>
             </div>
             <div class="col-8">
                 <p>
