--- a/en/Music/index.html
+++ b/en/Music/index.html
@@ -31,43 +31,91 @@
         </div>
     </nav>
     <article>
-        <p>
-            “Kleinstadt Deluxe” was released on 10 December 2021 and contains all eighteen songs from the recently released album “Kleinstadt”, plus three new songs. 
-        </p>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            After nearly two years without an album released Rin “Kleinstadt” on 29 October 2021. It contains eighteen songs and ten of them being new ones.s
-        </p>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            “Nimmerland” was Rin’s third album and was published on 6 December 2019. It contained nine new songs and five previously known songs.
-        </p>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            The album "Planet Megatron", released on 17 August 2018, is Rin's shortest album with twelve songs. The first of these songs, "Dior 2001", is probably his best-known song. 
-        </p>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            “EROS”, released 1 September 2017, was Rin’s first Album. Fifteen all new songs appeared on it.
-        </p>
+        <div class="row-2">
+            <div class="col-5">
+                <img src="../../Images/Music_KSDeluxe.png" id="IMG_Music_KSDeluxe" alt="Kleinstadt Deluxe Album-Cover">
+            </div>
+            <div class="col-6">
+                <p>
+                    “Kleinstadt Deluxe” was released on 10 December 2021 and contains all eighteen songs from the recently released album “Kleinstadt”, plus three new songs. 
+                </p>        
+            </div>
+            <div class="col-7">
+                <img src="../../Images/Music_KS.png" id="IMG_Music_KS" alt="Kleinstadt Album-Cover">
+            </div>
+            <div class="col-8">
+                <p>
+                    After nearly two years without an album released Rin “Kleinstadt” on 29 October 2021. It contains eighteen songs and ten of them being new ones.
+                </p>        
+            </div>
+            <div class="col-9">
+                <img src="../../Images/Music_Nimmerland.png" id="IMG_Music_Nimmerland" alt="Nimmerland Album-Cover">
+            </div>
+            <div class="col-10">
+                <p>
+                    “Nimmerland” was Rin’s third album and was published on 6 December 2019. It contained nine new songs and five previously known songs.
+                </p>        
+            </div>
+            <div class="col-11">
+                <img src="../../Images/Music_PlanetM.png" id="IMG_Music_PlanetM" id="Planet Megatron Album-Cover">
+            </div>
+            <div class="col-12">
+                <p>
+                    The album "Planet Megatron", released on 17 August 2018, is Rin's shortest album with twelve songs. The first of these songs, "Dior 2001", is probably his best-known song. 
+                </p>        
+            </div>
+            <div class="col-13">
+                <img src="../../Images/Music_EROS.png" id="IMG_Music_EROS" alt="EROS Album-Cover">
+            </div>
+            <div class="col-14">
+                <p>
+                    “EROS”, released 1 September 2017, was Rin’s first Album. Fifteen all new songs appeared on it.
+                </p>        
+            </div>
+            <div class="col-15">
+                <!-- This part is a feature from Spotify and was copied -->
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/18ISxWwWjV6rPLoVCXf1dz?utm_source=generator&theme=0" width="100%" height="400px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                <!-- end -->
+            </div>
+        </div>
+        <div class="row-3">
+            <div class="col-16">
+                <p>
+                    Rin's discography with all albums, singles and EPs: <a href="https://de.wikipedia.org/wiki/RIN_(Rapper)/Diskografie" class="a_Music">Wikipedia</a>
+                </p>
+            </div>
+            <div class="col-17">
+                <p>
+                    To Rin's profiles
+                </p>
+            </div>
+            <div class="col-18">
+                Spotify
+                <a href="https://open.spotify.com/artist/18ISxWwWjV6rPLoVCXf1dz?si=2hwMvYjrTWyfw5TSRVBDGQ"><img src="../../Images/Music_Spotify.png" id="IMG_Music_Spotify" alt="Spotify Logo"></a>
+            </div>
+            <div class="col-19">
+                Apple Music
+                <a href="https://music.apple.com/us/artist/rin/1199624018"><img src="../../Images/Music_AppleM.png" id="IMG_Music_AppleM" alt="Apple Music Logo"></a>
+            </div>
+            <div class="col-20">
+                SoundCloud
+                <a href="https://soundcloud.com/rin-official"><img src="../../Images/Music_SoundC.png" id="IMG_Music_SoundC" alt="Soundcloud Logo"></a>
+            </div>
+            <div class="col-21">
+                Deezer
+                <a href="https://www.deezer.com/en/artist/492716"><img src="../../Images/Music_Deezer.png" id="IMG_Music_Deezer" alt="Deezer Logo"></a> 
+            </div>
+        </div>
     </article>
     <footer>
         <div class="row-3">
-            <div class="col-10">
+            <div class="col-22">
                 <a href="../AboutMe" id="AboutMe" class="Footer">About Me</a>
             </div>
-            <div class="col-11">
+            <div class="col-23">
                 <p id="Copyright" class="Footer">©RinKingofLjubav</p>
             </div>
-            <div class="col-12">
+            <div class="col-24">
                 <a href="../../en/Music"><img src="/Images/English.png" alt="Set language to English" id="EnFlag"></a>
                 <a href="../../en/Music"><img src="/Images/German.png" alt="Sprache auf Deutsch ändern" id="DeFlag"></a>
             </div>
