--- a/en/Live/index.html
+++ b/en/Live/index.html
@@ -31,15 +31,24 @@
         </div>
     </nav>
     <article>
-        <P>
-            Rin will go on tour in 2023 to perform his album Kleinstadt. The concerts so far have shown great interest with over 100'000 visitors. Although the tour will mainly take place in Germany, Rin will also come to Zurich and Vienna. If you happen to live near one of these cities, you really shouldn't miss the opportunity to see the King of Lyubav perform live.
-        </P>
-        <P>
-            -----------------------
-        </P>
-        <p>
-            Tickets available here
-        </p>
+        <div class="row-2">
+            <div class="col-5">
+                <img src="../../Images/Live_Logo.png" id="IMG_Live_Logo" id="Rin Live logo">
+            </div>
+            <div class="col-6">
+                <p>
+                    Rin will go on tour in 2023 to perform his album Kleinstadt. The concerts so far have shown great interest with over 100'000 visitors. Although the tour will mainly take place in Germany, Rin will also come to Zurich and Vienna. If you happen to live near one of these cities, you really shouldn't miss the opportunity to see the King of Lyubav perform live.
+                </p>
+            </div>
+            <div class="col-7">
+                <p>
+                    Tickets available <a href="https://www.ticketmaster.ch/artist/rin-tickets/987486?gclid=Cj0KCQjw-pCVBhCFARIsAGMxhAdi4dc7X1bJLmE2CLVc5uztNXGMAdUs9coRoWwrISg6u_2FHy3cQtcaAqBuEALw_wcB&gclsrc=aw.ds&language=de-ch&utm_campaign=co%3ACH%20%7C%20an%3ARIN%20%7C%20obj%3ASales%20%7C%20chl%3AGn%20%7C%20cat%3AMusic%20%7C%20bud%3ATM%20%7C%20a%3A987486%20%7C%20pn%3AMainland%20Music%20%7C%20fc%3AIMC%20%7C&utm_content=paid&utm_medium=cpc&utm_source=TM-google" class="a_Live">here</a>
+                </p>
+            </div>
+            <div class="col-8">
+                <img src="../../Images/Live_Ticket.png"  id="IMG_Live_Ticket" alt="Rin Live Ticket">
+            </div>
+        </div>
     </article>
     <footer>
         <div class="row-3">
