--- a/en/Music/index.html
+++ b/en/Music/index.html
@@ -90,19 +90,19 @@
                 </p>
             </div>
             <div class="col-18">
-                Spotify
+                <a href="https://open.spotify.com/artist/18ISxWwWjV6rPLoVCXf1dz?si=2hwMvYjrTWyfw5TSRVBDGQ" class="a_Music">Spotify</a>
                 <a href="https://open.spotify.com/artist/18ISxWwWjV6rPLoVCXf1dz?si=2hwMvYjrTWyfw5TSRVBDGQ"><img src="../../Images/Music_Spotify.png" id="IMG_Music_Spotify" alt="Spotify Logo"></a>
             </div>
             <div class="col-19">
-                Apple Music
+                <a href="https://music.apple.com/us/artist/rin/1199624018" class="a_Music">Apple Music</a>
                 <a href="https://music.apple.com/us/artist/rin/1199624018"><img src="../../Images/Music_AppleM.png" id="IMG_Music_AppleM" alt="Apple Music Logo"></a>
             </div>
             <div class="col-20">
-                SoundCloud
+                <a href="https://soundcloud.com/rin-official" class="a_Music">SoundCloud</a>
                 <a href="https://soundcloud.com/rin-official"><img src="../../Images/Music_SoundC.png" id="IMG_Music_SoundC" alt="Soundcloud Logo"></a>
             </div>
             <div class="col-21">
-                Deezer
+                <a href="https://www.deezer.com/en/artist/492716" class="a_Music">Deezer</a> 
                 <a href="https://www.deezer.com/en/artist/492716"><img src="../../Images/Music_Deezer.png" id="IMG_Music_Deezer" alt="Deezer Logo"></a> 
             </div>
         </div>
