--- a/en/Current/index.html
+++ b/en/Current/index.html
@@ -44,9 +44,9 @@
                 <a href="../AboutRin"><img src="../../Images/Current_Rin.png" alt="Picture of Rin" id="IMG_Current_Rin"></a>
             </div>
             <div class="col-7">
-                <P>
+                <p>
                     stream Kleinstadt Deluxe <a href="../Music" class="a_Current">now</a> 
-                </P>        
+                </p>        
             </div>
             <div class="col-8">
                 <a href="../Music"><img src="../../Images/Current_KSDeluxe.png" alt="Kleinstadt Deluxe Album-Cover" id="IMG_Current_KSDeluxe"></a>
@@ -62,13 +62,16 @@
                 </p>        
             </div>
             <div class="col-11">
-                <a href="../Ljubav" alt="Ljubav Part 3 Advertisement" id="IMG_Current_Ljubav"><img src="../../Images/Current_Ljubav.png"></a>
-            </div>
-            <div class="col-12">
                 <p>
                     Ljubav© Part 3 <a href="../Ljubav" class="a_Current">now available</a>
                 </p>        
             </div>
+            <div class="col-12">
+                <a href="../Ljubav"><img src="../../Images/Current_Ljubav.png"  id="IMG_Current_Ljubav"  alt="Ljubav Part 3 Advertisement"></a>
+            </div>
+            <div class="col-14">
+            </div>
+        </div>
     </article>
     <footer>
         <div class="row-3">
