--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
                 </p>        
             </div>
             <div class="col-11">
-                <a href="en/Ljubav" alt="Ljubav Part 3 Advertisement" id="IMG_Current_Ljubav"><img src="Images/Current_Ljubav.png"></a>
-            </div>
-            <div class="col-12">
                 <p>
                     Ljubav© Part 3 <a href="en/Ljubav" class="a_Current">now available</a>
-                </p>        
+                </p>     
+            </div>
+            <div class="col-12">
+                <a href="en/Ljubav"><img src="Images/Current_Ljubav.png"  id="IMG_Current_Ljubav"  alt="Ljubav Part 3 Advertisement"></a>
+            </div>
+            <div class="col-14">
             </div>
     </article>
     <footer>
